--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                   <img src="" alt="cloudy" class="float-left" id="icon" />
                   <div class="float-left">
                     <strong id="temperature"></strong
-                    ><small class="units"> °C | <a href="#">°F</a> </small>
+                    ><small class="units">
+                      <a href="#" id="celsius-link" class="active">°C</a> |
+                      <a href="#" id="fahrenheit-link">°F</a>
+                    </small>
                   </div>
                 </div>
               </div>
