Updated the "coded by" comment

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
             target="_blank"
             >Open-source code</a
           >
-          by Suzana Kešerac
+          by Suzana Kešerac (recreated from
+          <a href="https://www.shecodes.io/" target="_blank"
+            >SheCodes Workshop</a
+          >)
         </small>
       </div>
     </div>
