Removed the Fahrenheit conversion 👋🏻

--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
                   <img src="" alt="cloudy" class="float-left" id="icon" />
                   <div class="float-left">
                     <strong id="temperature"></strong
-                    ><small class="units">
-                      <a href="#" id="celsius-link" class="active">°C</a> |
-                      <a href="#" id="fahrenheit-link">°F</a>
-                    </small>
+                    ><span class="units">°C </span>
                   </div>
                 </div>
               </div>
